parsing/WorklogParser.py
# Generated from Worklog.g4 by ANTLR 4.5.1
# encoding: utf-8
from antlr4 import *
from io import StringIO



class WorklogParser ( Parser ):

    grammarFileName = "Worklog.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'# Week '", "'## '", "' '", "'- Start @ '", 
                     "'- Extra '", "'- Lunch '", "' (biz)'", "'- Stop @ '", 
                     "'- '" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "NL", "NUM", "STR" ]

    RULE_wl = 0
    RULE_week = 1
    RULE_weekHeader = 2
    RULE_weekBody = 3
    RULE_day = 4
    RULE_dayHeader = 5
    RULE_dayInfo = 6
    RULE_start = 7
    RULE_extra = 8
    RULE_lunch = 9
    RULE_stop = 10
    RULE_dayBody = 11
    RULE_additionalLine = 12
    RULE_wordWithMaybeSpace = 13

    ruleNames =  [ "wl", "week", "weekHeader", "weekBody", "day", "dayHeader", 
                   "dayInfo", "start", "extra", "lunch", "stop", "dayBody", 
                   "additionalLine", "wordWithMaybeSpace" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    NL=10
    NUM=11
    STR=12

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class WlContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def week(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(WorklogParser.WeekContext)
            else:
                return self.getTypedRuleContext(WorklogParser.WeekContext,i)


        def getRuleIndex(self):
            return WorklogParser.RULE_wl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWl" ):
                listener.enterWl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWl" ):
                listener.exitWl(self)




    def wl(self):

        localctx = WorklogParser.WlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_wl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 28
                self.week()
                self.state = 31 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==WorklogParser.T__0):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WeekContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def weekHeader(self):
            return self.getTypedRuleContext(WorklogParser.WeekHeaderContext,0)


        def weekBody(self):
            return self.getTypedRuleContext(WorklogParser.WeekBodyContext,0)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(WorklogParser.NL)
            else:
                return self.getToken(WorklogParser.NL, i)

        def getRuleIndex(self):
            return WorklogParser.RULE_week

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWeek" ):
                listener.enterWeek(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWeek" ):
                listener.exitWeek(self)




    def week(self):

        localctx = WorklogParser.WeekContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_week)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self.weekHeader()
            self.state = 35 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 34
                self.match(WorklogParser.NL)
                self.state = 37 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==WorklogParser.NL):
                    break

            self.state = 39
            self.weekBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WeekHeaderContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self):
            return self.getToken(WorklogParser.NUM, 0)

        def getRuleIndex(self):
            return WorklogParser.RULE_weekHeader

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWeekHeader" ):
                listener.enterWeekHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWeekHeader" ):
                listener.exitWeekHeader(self)




    def weekHeader(self):

        localctx = WorklogParser.WeekHeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_weekHeader)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(WorklogParser.T__0)
            self.state = 42
            self.match(WorklogParser.NUM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WeekBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def day(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(WorklogParser.DayContext)
            else:
                return self.getTypedRuleContext(WorklogParser.DayContext,i)


        def getRuleIndex(self):
            return WorklogParser.RULE_weekBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWeekBody" ):
                listener.enterWeekBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWeekBody" ):
                listener.exitWeekBody(self)




    def weekBody(self):

        localctx = WorklogParser.WeekBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_weekBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 44
                self.day()
                self.state = 47 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==WorklogParser.T__1):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dayHeader(self):
            return self.getTypedRuleContext(WorklogParser.DayHeaderContext,0)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(WorklogParser.NL)
            else:
                return self.getToken(WorklogParser.NL, i)

        def dayInfo(self):
            return self.getTypedRuleContext(WorklogParser.DayInfoContext,0)


        def dayBody(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(WorklogParser.DayBodyContext)
            else:
                return self.getTypedRuleContext(WorklogParser.DayBodyContext,i)


        def getRuleIndex(self):
            return WorklogParser.RULE_day

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDay" ):
                listener.enterDay(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDay" ):
                listener.exitDay(self)




    def day(self):

        localctx = WorklogParser.DayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_day)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.dayHeader()
            self.state = 50
            self.match(WorklogParser.NL)
            self.state = 51
            self.dayInfo()
            self.state = 52
            self.match(WorklogParser.NL)
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==WorklogParser.T__2 or _la==WorklogParser.T__8:
                self.state = 53
                self.dayBody()
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==WorklogParser.NL:
                self.state = 59
                self.match(WorklogParser.NL)
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DayHeaderContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(WorklogParser.NUM)
            else:
                return self.getToken(WorklogParser.NUM, i)

        def STR(self):
            return self.getToken(WorklogParser.STR, 0)

        def getRuleIndex(self):
            return WorklogParser.RULE_dayHeader

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDayHeader" ):
                listener.enterDayHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDayHeader" ):
                listener.exitDayHeader(self)




    def dayHeader(self):

        localctx = WorklogParser.DayHeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_dayHeader)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(WorklogParser.T__1)
            self.state = 66
            self.match(WorklogParser.NUM)
            self.state = 67
            self.match(WorklogParser.T__2)
            self.state = 68
            self.match(WorklogParser.STR)
            self.state = 69
            self.match(WorklogParser.T__2)
            self.state = 70
            self.match(WorklogParser.NUM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DayInfoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def start(self):
            return self.getTypedRuleContext(WorklogParser.StartContext,0)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(WorklogParser.NL)
            else:
                return self.getToken(WorklogParser.NL, i)

        def lunch(self):
            return self.getTypedRuleContext(WorklogParser.LunchContext,0)


        def stop(self):
            return self.getTypedRuleContext(WorklogParser.StopContext,0)


        def extra(self):
            return self.getTypedRuleContext(WorklogParser.ExtraContext,0)


        def getRuleIndex(self):
            return WorklogParser.RULE_dayInfo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDayInfo" ):
                listener.enterDayInfo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDayInfo" ):
                listener.exitDayInfo(self)




    def dayInfo(self):

        localctx = WorklogParser.DayInfoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_dayInfo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.start()
            self.state = 73
            self.match(WorklogParser.NL)
            self.state = 74
            self.lunch()
            self.state = 75
            self.match(WorklogParser.NL)
            self.state = 76
            self.stop()
            self.state = 78
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 77
                self.extra()


            self.state = 81
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 80
                self.match(WorklogParser.NL)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STR(self):
            return self.getToken(WorklogParser.STR, 0)

        def getRuleIndex(self):
            return WorklogParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = WorklogParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(WorklogParser.T__3)
            self.state = 84
            self.match(WorklogParser.STR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExtraContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self):
            return self.getToken(WorklogParser.NL, 0)

        def STR(self):
            return self.getToken(WorklogParser.STR, 0)

        def getRuleIndex(self):
            return WorklogParser.RULE_extra

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExtra" ):
                listener.enterExtra(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExtra" ):
                listener.exitExtra(self)




    def extra(self):

        localctx = WorklogParser.ExtraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_extra)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(WorklogParser.NL)
            self.state = 87
            self.match(WorklogParser.T__4)
            self.state = 88
            self.match(WorklogParser.STR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LunchContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STR(self):
            return self.getToken(WorklogParser.STR, 0)

        def getRuleIndex(self):
            return WorklogParser.RULE_lunch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLunch" ):
                listener.enterLunch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLunch" ):
                listener.exitLunch(self)




    def lunch(self):

        localctx = WorklogParser.LunchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_lunch)
        try:
            self.state = 95
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.match(WorklogParser.T__5)
                self.state = 91
                self.match(WorklogParser.STR)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.match(WorklogParser.T__5)
                self.state = 93
                self.match(WorklogParser.STR)
                self.state = 94
                self.match(WorklogParser.T__6)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StopContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STR(self):
            return self.getToken(WorklogParser.STR, 0)

        def getRuleIndex(self):
            return WorklogParser.RULE_stop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStop" ):
                listener.enterStop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStop" ):
                listener.exitStop(self)




    def stop(self):

        localctx = WorklogParser.StopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_stop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(WorklogParser.T__7)
            self.state = 98
            self.match(WorklogParser.STR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DayBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self):
            return self.getToken(WorklogParser.NL, 0)

        def wordWithMaybeSpace(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(WorklogParser.WordWithMaybeSpaceContext)
            else:
                return self.getTypedRuleContext(WorklogParser.WordWithMaybeSpaceContext,i)


        def additionalLine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(WorklogParser.AdditionalLineContext)
            else:
                return self.getTypedRuleContext(WorklogParser.AdditionalLineContext,i)


        def getRuleIndex(self):
            return WorklogParser.RULE_dayBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDayBody" ):
                listener.enterDayBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDayBody" ):
                listener.exitDayBody(self)




    def dayBody(self):

        localctx = WorklogParser.DayBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_dayBody)
        self._la = 0 # Token type
        try:
            self.state = 132
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==WorklogParser.T__2:
                    self.state = 100
                    self.match(WorklogParser.T__2)
                    self.state = 105
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 106
                self.match(WorklogParser.T__8)
                self.state = 108 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 107
                    self.wordWithMaybeSpace()
                    self.state = 110 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==WorklogParser.NUM or _la==WorklogParser.STR):
                        break

                self.state = 112
                self.match(WorklogParser.NL)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==WorklogParser.T__2:
                    self.state = 114
                    self.match(WorklogParser.T__2)
                    self.state = 119
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 120
                self.match(WorklogParser.T__8)
                self.state = 122 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 121
                    self.wordWithMaybeSpace()
                    self.state = 124 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==WorklogParser.NUM or _la==WorklogParser.STR):
                        break

                self.state = 126
                self.match(WorklogParser.NL)
                self.state = 128 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 127
                        self.additionalLine()

                    else:
                        raise NoViableAltException(self)
                    self.state = 130 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AdditionalLineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self):
            return self.getToken(WorklogParser.NL, 0)

        def wordWithMaybeSpace(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(WorklogParser.WordWithMaybeSpaceContext)
            else:
                return self.getTypedRuleContext(WorklogParser.WordWithMaybeSpaceContext,i)


        def getRuleIndex(self):
            return WorklogParser.RULE_additionalLine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdditionalLine" ):
                listener.enterAdditionalLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdditionalLine" ):
                listener.exitAdditionalLine(self)




    def additionalLine(self):

        localctx = WorklogParser.AdditionalLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_additionalLine)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 134
                self.match(WorklogParser.T__2)
                self.state = 137 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==WorklogParser.T__2):
                    break

            self.state = 140 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 139
                self.wordWithMaybeSpace()
                self.state = 142 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==WorklogParser.NUM or _la==WorklogParser.STR):
                    break

            self.state = 144
            self.match(WorklogParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WordWithMaybeSpaceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STR(self):
            return self.getToken(WorklogParser.STR, 0)

        def NUM(self):
            return self.getToken(WorklogParser.NUM, 0)

        def getRuleIndex(self):
            return WorklogParser.RULE_wordWithMaybeSpace

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWordWithMaybeSpace" ):
                listener.enterWordWithMaybeSpace(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWordWithMaybeSpace" ):
                listener.exitWordWithMaybeSpace(self)




    def wordWithMaybeSpace(self):

        localctx = WorklogParser.WordWithMaybeSpaceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_wordWithMaybeSpace)
        self._la = 0 # Token type
        try:
            self.state = 160
            token = self._input.LA(1)
            if token in [WorklogParser.STR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.match(WorklogParser.STR)
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==WorklogParser.T__2:
                    self.state = 147
                    self.match(WorklogParser.T__2)
                    self.state = 152
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)


            elif token in [WorklogParser.NUM]:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.match(WorklogParser.NUM)
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==WorklogParser.T__2:
                    self.state = 154
                    self.match(WorklogParser.T__2)
                    self.state = 159
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)


            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





